# vk-ml-task

./: .dockerignore  .gitignore  001_EDA_first_view.ipynb  Dockerfile  README.md  main.py  pyproject.toml  user_id_gender_prediction.sh
configs/: consts.py
trainer/: optuna_trainer.py
utils/: utils.py
